src/test/deca/context/invalid/aatest.deca
// Description:
//     Operation arithmetique modulo avec des mauvais types.
//
// Resultats:
//    Ligne 12: Arithmetic modulo operation type mismatch
//
// Historique:
//    cree le 01/01/2023

class B{

}

class A extends B{
    protected int y;
    int getX(){
        this;
    }
}

{

}

